Added pairing instructions
The button has two modes ("scenekoppeling" and "afstandsdimmermodus" in dutch) and pairing seemingly only works in one of the two modes. Ran into this myself when trying to pair the button.

--- a/docs/devices/HG08164.md
+++ b/docs/devices/HG08164.md
@@ -25,6 +25,11 @@ pageClass: device-page
 <!-- Notes BEGIN: You can edit here. Add "## Notes" headline if not already present. -->
 ## Notes
 
+### Pairing
+Press the reset-button behind the battery cover for about 6 seconds. The light at the front should start blinking and it is possible to pair the device.
+If pairing does not seem to work: press the button (the button itself, not the reset button) quickly three times in a row to change the mode the button is in. Then try pairing again.
+
+
 ### Battery value
 If battery value is not showing in Zigbee2MQTT briefly pressing reset button AFTER device is fully paired usually resolves the issue.
 <!-- Notes END: Do not edit below this line -->
